# 2021-Master-Thesis-UNIFI

./: .gitignore  README.md  req.txt  setup.cfg  setup.py
args/: args.yaml  arguments.json  arguments.yaml
docs/: 0. Overview.ipynb  🚀 Thesis Roadmap.ipynb
examples/: try_datasets.py
examples/frontend/: Dockerfile  README.md  app.py  embed_viz.py  requirements.txt  setup.py
examples/generic/: _run.ipynb
examples/language-modeling/: run_mlm copy.ipynb  run_mlm.ipynb  run_mlm_no_trainer.ipynb  run_mlm_no_trainer.py
examples/sequence-classification/: run_glue.ipynb  run_glue_no_trainer.ipynb  run_glue_no_trainer.py
examples/summarization/: run_summurization_no_trainer.py
examples/text-generation/: run_generation.py
examples/visualization/: pipeline_visualization.ipynb  pipeline_visualization.py
examples/visualization_interactive/: embedding_args.yaml  run_embedding.py
examples_sweeps/visualization/: README.md  pipeline_visualization.py
examples_sweeps/visualization/config/: default.yaml
notebooks/: .gitignore  2. 🤗transformers (SciBERT).ipynb  3. sentence-tranformers (specter).ipynb  98. S2orc Analysis.ipynb  98. S2orc Analysis.py  99. Journal Analysis project - Francesco.ipynb
notebooks/.old/: 1. Datasets S2ORC #Cs & Pre-Training.ipynb  1. Datasets S2ORC #Cs.ipynb  1. Datasets.ipynb  run_mlm-no trainer.ipynb  run_mlm.ipynb
notebooks/clustering/: 0. Clustering & Visualization.ipynb
notebooks/datasets/: 1. Datasets-Francesco.ipynb  3. Datasets-Journal.ipynb  roadmap.txt
notebooks/todo/: 99a. BoW.ipynb  99a. run_mlm.ipynb
(+86 files in other folders)
