[metadata]
name = thesis
version = 0.0.1
author = Emanuele Vivoli
author_email = vivoli.emanuele@gmail.com
description = A small example package for my Master Thesis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/emanuelevivioli/thesis
project_urls =
    Bug Tracker = https://github.com/emanuelevivioli/thesis/issues
classifiers =
    Development Status :: 0 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7.9
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src